@@ -9,6 +9,10 @@ proc gas_64_check { } {
     return [regexp "targets:.*x86-64" [lindex $status 1]];
 }
 
+if [expr [istarget "i*86-*-solaris*"] || [istarget "x86_64-*-solaris*"]] then {
+    return
+}
+
 if [expr ([istarget "i*86-*-*"] || [istarget "x86_64-*-*"]) && [gas_64_check] && [is_elf_format]] then {
 
     global ASFLAGS
